<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TitleAddEdit"
                android:layout_width="224dp"
                android:layout_height="32dp"
                android:layout_marginTop="55sp"
                android:text="@string/tvTitleComputer"
                android:textAlignment="center"
                android:textColor="@color/title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etBrandComputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40sp"
                android:hint="@string/brandComputer"
                android:padding="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPriceComputer" />

            <Button
                android:id="@+id/btnRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40sp"
                android:text="@string/btnSaveComputer"
                android:backgroundTint="@color/btnComputer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDescriptionComputer" />

            <EditText
                android:id="@+id/etPriceComputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40sp"
                android:hint="@string/priceComputer"
                android:padding="10sp"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/etNameComputer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etDescriptionComputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40sp"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/descriptionComputer"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="4"
                android:overScrollMode="always"
                android:padding="10sp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                app:layout_constraintTop_toBottomOf="@id/etBrandComputer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etNameComputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40sp"
                android:hint="@string/nameComputer"
                android:padding="10sp"
                app:layout_constraintTop_toBottomOf="@id/TitleAddEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>